--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -34,4 +34,11 @@
     font-size:0.7rem;
 }
 
+.input-group-append, .input-group-prepend {
+    display:initial;
+}
+.input-group-append button {
+    max-height:38px;
+    border:none;
+}
 /* END USER */
