--- a/src/View/Admin/campus.html.twig
+++ b/src/View/Admin/campus.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center">CREATE CAMPUS</h1>
+                <h1 class="text-center">Create campus</h1>
             </div>
         </div>
         <div class="row">
@@ -32,13 +32,12 @@
                         </div>
                     </div>
                     <p class="text-white">{{ errors.error_city }}</p>
-                    <div class="text-right">
+                    <div class="text-left">
                         <button class="btn btn-campus text-white " type="submit">Add Campus</button>
                     </div>
                 </form>
             </div>
         </div>
-
     </div>
     </div>
 <div class="container">
