--- a/src/View/User/user_edit.html.twig
+++ b/src/View/User/user_edit.html.twig
@@ -60,7 +60,7 @@
                                 <i class="fa fa-eye"></i>
                             </button>
                         </div>
-                        <small class="text-white">At least 8 characters whith at least 1 upperCase, 1 lowercase and 1 digit</small>
+                        <small class="text-white">At least 8 characters whith at least 1 upperCase, 1 lowercase, 1 digit and 1 special character</small>
                         <span class="text-green">Let empty if you don't want to change your password</span>
                     </div>
                 </div>
@@ -75,10 +75,9 @@
                                 <i class="fa fa-eye"></i>
                             </button>
                         </div>
-                        <div>
-                            <small class="text-white">At least 8 characters whith at least 1 upperCase, 1 lowercase and 1 digit</small>
-                        </div>
+                        <small class="text-white">At least 8 characters whith at least 1 upperCase, 1 lowercase, 1 digit and 1 special character</small>
                     </div>
+
                 </div>
             </div>
             <div class="row d-flex">
