--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -43,18 +43,19 @@ body {
 h1 {
     font-family: var(--josh-major-font);
     color: var(--josh-green);
-    font-size:2rem;
+    font-size:3rem;
     padding:35px 0;
 }
 
 h2 {
     font-family: var(--josh-major-font);
     color: var(--josh-green);
-    font-size: 1.2rem;
+    /*font-size: 1.5rem;*/
 }
 
 h3 {
     color: white;
+    font-size:1.3rem;
 }
 
 .error {
@@ -65,6 +66,14 @@ h3 {
 .success {
     background-color: var(--josh-green);
     color:var(--josh-grey);
+}
+
+.btn {
+    padding:0px 8px;
+}
+
+.btn i {
+    font-size:0.9rem;
 }
 
 .btn.show-pass i {
@@ -113,13 +122,22 @@ h3 {
 .btn {
     border-radius: 0;
     font-family: var(--josh-major-font);
-    font-size: 0.9rem;
+    font-size: 1.3rem;
 }
 
 /* END GENERAL */
 
 /* HEADER */
-
+#navbarNav {
+    height:60px;
+}
+.navbar-nav {
+    height:60px;
+}
+.navbar-nav li {
+    height:60px;
+    line-height: 60px;
+}
 .navbar {
     background-color: var(--josh-grey);
 }
@@ -131,14 +149,14 @@ nav.nav-item {
 
 nav .nav-link:hover {
     color: var(--josh-green) !important;
-    font-size: 1.2rem;
-    transition: 0.4s;
+    font-size: 1.3rem;
+    transition: 0.3s;
 }
 
 nav .nav-link {
     font-size: 1.1rem;
     font-variant-caps: small-caps;
-    padding: 0 20px !important;
+    padding: 0 15px !important;
 
 }
 
