--- a/src/View/Admin/challenge.html.twig
+++ b/src/View/Admin/challenge.html.twig
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col-4 offset-1">
-                <div class="text-center pb-3">
+                <div class="text-left pb-3">
                     <h2>Existing challenges</h2>
                 </div>
                 <div class="row list-container overflow-auto">
@@ -27,8 +27,8 @@
             </div>
             <div class="col-4 offset-2">
                 <form action="" method="post">
-                    <div class="row d-flex justify-content-center">
-                        <div class="text-center pb-3">
+                    <div class="row d-flex justify-content-start">
+                        <div class="text-left pb-3">
                             <h2>Create a challenge</h2>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                             <input type="text" class="form-control" placeholder="The challenge's answer" aria-describedby="basic-addon1" name="flag" value="{{ challenge.flag }}">
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-center">
+                    <div class="row d-flex justify-content-start">
                         <div class="form-group">
                             <button type="submit" name="createChallenge" class="align-self-center btn btn-dark text-white">Create the challenge <i class="fa fa-save"></i></button>
                         </div>
