--- a/src/View/Admin/challenge_edit.html.twig
+++ b/src/View/Admin/challenge_edit.html.twig
@@ -12,9 +12,9 @@
         <div class="row">
             <div class="col-4 offset-4">
                 <form action="" method="post">
-                    <div class="row d-flex justify-content-center">
-                        <div class="text-center pb-3">
-                            <h2>Modify your challenge</h2>
+                    <div class="row d-flex justify-content-start">
+                        <div class="text-left pb-3">
+                            <h2>Edit your challenge</h2>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
@@ -73,7 +73,7 @@
                             <input type="text" class="form-control" placeholder="The challenge's answer" aria-describedby="basic-addon1" name="flag" value="{{ challenge.flag }}">
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-center">
+                    <div class="row d-flex justify-content-start">
                         <div class="form-group">
                             <button type="submit" name="saveChallenge" class="align-self-center btn btn-dark text-white">Save your challenge <i class="fa fa-save"></i></button>
                             {% if not onContest.challenge_id %}
