--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -99,7 +99,7 @@
                         <ul class="list-group col-12 p-0" id="list-to-add-flags">
                             {% for challenge in challenges|reverse %}
                                 <li id="toadd-{{ challenge.id }}" class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2" data-difficulty="{{ challenge.difficulty_id }}" data-name="{{ challenge.name }}" data-challenge="{{ challenge.id }}" >
-                                    <i class="fa fa-flag mgr-7"></i> {{ challenge.name }} ({{ challenge.difficulty_id }}/5)
+                                    <i class="fa fa-flag mgr-7"></i> {{ challenge.name }} <img src="/assets/images/d{{challenge.difficulty_id}}.svg">
                                     <button id="adderBtn{{ challenge.id }}" type="button" data-target="toadd-{{ challenge.id }}" class="btn btn-dark text-white rounded-sm p-0 pl-1 pr-1 challenge-adder float-right">Add</button>
                                 </li>
                             {% endfor %}
@@ -116,7 +116,7 @@
                         <ul class="list-group col-12 p-0" id="list-ordered-flags">
                             {% for challengeInContest in challengesInContest %}
                                 <li id="challenge-id{{ challengeInContest.id }}" data-difficulty="{{ challengeInContest.difficulty }}"  data-name="{{ challengeInContest.name }}" data-challenge="{{ challengeInContest.id }}" class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2 draggable">
-                                    <span class="list-order-number mgr-7">{{ loop.index }}</span> <i class="fa fa-flag"></i> {{ challengeInContest.name }} ({{challengeInContest.difficulty}}/5)
+                                    <span class="list-order-number mgr-7">{{ loop.index }}</span> <i class="fa fa-flag"></i> {{ challengeInContest.name }} <img src="/assets/images/d{{challengeInContest.difficulty}}.svg">
                                     <a href="#" class="remover float-right" id="remover{{ challengeInContest.id }}" data-target="challenge-id{{ challengeInContest.id }}"><img src="/assets/images/close.svg"></a>
                                 </li>
                             {% endfor %}
