--- a/src/View/Admin/type.html.twig
+++ b/src/View/Admin/type.html.twig
@@ -4,36 +4,34 @@
     <div class="container">
     <div class="row">
         <div class="col-12">
-            <h1 class="text-center">CREATE CHALLENGE TYPE</h1>
-        </div>
-        <div class="col-12">
-            <h2 class="text-white text-center"></h2>
+            <h1 class="text-center">Create challenge type</h1>
         </div>
     </div>
-    <div class="container-specialties">
-        <form class="container container-specialties" method="post">
-            <div class="row-specialty">
-                <div class="input-group specialty mb-3 col-5">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">Challenge Type</span>
-                    </div>
-                    <input value="{{ type.title }}" type="text" class="form-control" name="type"
-                           aria-label="type" aria-describedby="basic-addon1">
-                    <div class="{% if (type_exist == 0 ) %} hide {% endif %} text-red ">This type already exist</div>
-                </div>
-                <p class="text-white">{{ errors.error_title }}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-4 offset-md-4">
+                <form class="" method="post">
+                        <div class="input-group specialty mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Challenge Type</span>
+                            </div>
+                            <input value="{{ type.title }}" type="text" class="form-control" name="type"
+                                   aria-label="type" aria-describedby="basic-addon1">
+                            <div class="{% if (type_exist == 0 ) %} hide {% endif %} text-red ">This type already exist</div>
+                        </div>
+                        <p class="text-white">{{ errors.error_title }}</p>
+                    <button class="btn specialty text-white " type="submit" class="btn btn-primary">Add Type</button>
+                </form>
             </div>
-            <button class="btn specialty text-white " type="submit" class="btn btn-primary">Add Type</button>
-        </form>
-
-        <div class="container container-specialties">
-            <div class="form-group">
-                <label class="text-white specialty-font"> All Challenge Types</label>
-                <ul multiple class="form-control list-specialty" id="exampleFormControlSelect2">
-                    {% for type in types %}
-                    <li>{{ type.title }}</li>
-                    {% endfor %}
-                </ul>
+            <div class="col-12 col-md-4 offset-md-4">
+                <div class="form-group">
+                    <label class="text-white specialty-font"> All Challenge Types</label>
+                    <ul multiple class="form-control list-specialty" id="exampleFormControlSelect2">
+                        {% for type in types %}
+                        <li>{{ type.title }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
