--- a/src/View/Admin/users.html.twig
+++ b/src/View/Admin/users.html.twig
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="row d-flex flex-row justify-center">
-            <div class="col-12">
+            <div class="col-12 scrollable-content">
                 <table class="text-white adminusers" >
                     <thead>
                         <tr class="text-red">
@@ -62,9 +62,8 @@
         </div>
     </div>
     <!-- Position it -->
-    <div style="position: absolute; top: 60px; right: 0; height:15px;">
         {% for user in users %}
-            <div class="toast" role="alert" id="user-toast-{{ user.id }}">
+            <div class="toast" role="alert" id="user-toast-{{ user.id }}" style="z-index:9999">
                 <div class="toast-header bg-danger">
                     <img src="/assets/images/logo/picto.svg" class="rounded mr-2" alt="user github avatar">
                     <strong class="mr-auto text-white">Joshua administration</strong>
@@ -76,7 +75,6 @@
                 </div>
             </div>
         {%  endfor %}
-    </div>
 {% endblock %}
 
 {% block javascript %}
