--- a/src/View/Home/about.html.twig
+++ b/src/View/Home/about.html.twig
@@ -9,18 +9,18 @@
         <h3>History :</h3>
 
         <p class="text-white mt-5">
-            Joshua was developed as part of project 2 of the Wild Code School Web Developer training,
-            coding in PHP with a WCS in-house framework : <a href="https://github.com/WildCodeSchool/simple-mvc" target="_blank" class="link-footer">Simple MVC</a>.
+            Joshua is a Wild Code School student's project,
+            coded in PHP with the school's own framework : <a href="https://github.com/WildCodeSchool/simple-mvc" target="_blank" class="link-footer">Simple MVC</a>.
         </p>
 
         <p class="text-white">
-            The design of the site is made to be simple and to resemble a computer terminal.
+            The design of the website is deliberately simple, to look like a computer terminal.
         </p>
 
         <p class="text-white">
-            The name Joshua is from an old movie from the 80s, <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=51719.html" target="_blank" class="link-footer">War Games</a>.
-            Joshua is in the film an intelligent computer developed to predict likely scenarios of wars and the countermeasures going with them.<br>
-            The phrase 'Shall we play a games?" Is also taken from this movie.
+            The name Joshua comes from a 1983 movie, <a href="https://www.imdb.com/title/tt0086567/" target="_blank" class="link-footer">War Games</a>.
+            In this movie, Joshua is an intelligent computer developed to predict likely scenarios of wars and the countermeasures going with them.<br>
+            The sentence "Shall we play a game?" is also taken from this movie.
         </p>
 
         <figure class="mx-auto mt-4">
