--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -104,14 +104,14 @@
             <a  href="#" class="close-console console-closer" aria-label="Close" id="console-closer-{{ active_contest.id }}">
                 <i class="fas fa-window-close"></i>
             </a>
-            <div class="story col-12 col-md-4" >
+            <div class="story col-12 col-md-5" >
                 <h2>Follow what's happening ... </h2>
                 <div id="story">
                     {% include 'Components/_console.html.twig' %}
                 </div>
             </div>
-            <div class="timer-column col-12 col-md-4">
-                <div id="timer{{ active_contest.id }}"></div>
+            <div class="timer-column col-12 col-md-3">
+                <div id="timer{{ active_contest.id }}" class="timer"></div>
             </div>
             <div class="ranking-console col-12 col-md-4">
                 <img src="/assets/images/podium.svg" width="30"><br> <b>Ranking on fire</b>
