--- a/src/View/Admin/specialty.html.twig
+++ b/src/View/Admin/specialty.html.twig
@@ -20,6 +20,7 @@
                       <input value="{{ specialty.title }}" type="text" class="form-control" name="specialty"
                              aria-label="Specialty" aria-describedby="basic-addon1">
                   </div>
+                  <div class="{% if(specialty_exist == 0) %} hide {% endif %} text-red">This specialty already exist</div>
                   <p class="text-white">{{ errors.error_title }}</p>
               </div>
               <button class="btn specialty text-white " type="submit" class="btn btn-primary">Add Specialty</button>
