--- a/src/View/Contests/results.html.twig
+++ b/src/View/Contests/results.html.twig
@@ -87,9 +87,9 @@
         <div class="row text-center">
 
             <div class="col-12 col-md-6 offset-md-3 text-center">
-                <small class="text-red">Time left before contest end </small><br>
+                <small class="text-red">Time left before contest's end</small><br>
                 <div id="contest-timer" class="timer"></div>
-                <p class="text-white mgt-20">You'll see the results after<br>contest will be ended</p>
+                <p class="text-white mgt-20">You'll see here the results<br>after the end of the contest</p>
             </div>
 
         </div>
