--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -25,7 +25,7 @@
                     <div class="col-6 col-md-4 text-white text-center">
                         <small class="info-challenge-title">
                             Type of challenge<br>
-                        {{ challengeOnTheWay.type }}
+                        <span class="type-of-challenge">{{ challengeOnTheWay.type }}</span>
                         </small>
                     </div>
 
@@ -47,7 +47,7 @@
                             <input type="hidden" name="challenge-id" id="challenge-id" value="{{ challengeOnTheWay.id }}">
                             <input type="hidden" name="contest-id" id="contest-id" value="{{contest.id}}">
                             <input type="hidden" name="challenge-order" id="challenge-order" value="{{challengeOnTheWay.order_challenge}}">
-                            <input type="text" name="flag" id="flag" placeholder="your solution" value="">
+                            <input type="text" name="flag" id="flag" placeholder="Solution" value="">
                             <input type="submit" class="btn btn-dark text-white go-to-flag" value="Try it"> <i id="spinner-solution" class="fa fa-spinner fa-spin text-white hide"></i>
                         </div>
                         <div class=" alert-danger w-70 mgt-20 game-message" id="error-message"></div>
@@ -77,7 +77,7 @@
             </div>
             {% else %}
                 <div class="col-12 text-center flag-playground">
-                    <h1>You allready played this contest or this challenge is Off</h1>
+                    <h1>You already played this contest or this challenge is Off</h1>
                     <a class="btn btn-dark text-white" href="/contest/results/{{contest.id}}">See the results</a>
                 </div>
             {% endif %}
@@ -94,10 +94,10 @@
                     </button>
                 </div>
                 <div class="modal-body text-left">
-                    <p>You have successfully completed all steps.</p>
+                    <p>You've been through this contest.</p>
                 </div>
                 <div class="modal-footer d-flex justify-content-start">
-                    <a class="btn btn-success " href="/contest/results/{{ contest.id }}">Go to last step</a>
+                    <a class="btn btn-success " href="/contest/results/{{ contest.id }}">Go see the results</a>
                 </div>
             </div>
         </div>
