--- a/src/View/User/user_profile.html.twig
+++ b/src/View/User/user_profile.html.twig
@@ -89,7 +89,7 @@
                                     <button class="btn btn-link title-collapse collapsed" type="button"
                                             data-toggle="collapse" data-target="#z{{ contest.id }}" aria-expanded="true"
                                             aria-controls="collapseOne">
-                                        {{ contest.name }}
+                                        <i class="fa fa-flag-checkered"></i> {{ contest.name }}
                                     </button>
                                 </h2>
                             </div>
