--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -29,6 +29,14 @@
 
 /* MAIN ADMIN PAGE */
 
+.container-admin {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 .admin_title {
     margin: 4rem;
 }
