--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -18,7 +18,8 @@
                             <label for="email" class="col-lg-6 col-form-label text-white text-nowrap">Joshua@User ›
                                 Login :</label>
                             <input type="text" class="form-control col-lg-6" name="pseudo" id="pseudo"
-                                   placeholder="Enter your pseudo" value="{{ login }}" pattern="^[A-Za-z1-9-_]{3,26}" required>
+                                   placeholder="Enter your pseudo" value="{{ login }}"  required
+                                   pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ0-9-_]{3,26}">
                         </div>
                         <div class="form-group row">
                             <label for="password" class="col-lg-6 col-form-label text-white text-nowrap">Joshua@User ›
@@ -45,9 +46,6 @@
             <div class="container offset-lg-2 mt-5 pl-lg-4">
                 <div class="row">
                     <p class="text-white">Joshua@User › <a href="/user/register" class="text-nowrap index-link">Create an account ?</a></p>
-                </div>
-                <div class="row">
-                    <p class="text-white">Joshua@User › <a href="/user/forgot" class="text-nowrap index-link">Forgot your password ?</a></p>
                 </div>
             </div>
         </div>
